# unifiedmemory

./: .gitignore
code/llvm-pass/: CMakeLists.txt  config.sh
code/llvm-pass/analysis/: CMakeLists.txt  TFGPass.cpp  TFGPass.h
code/llvm-pass/skeleton/: Skeleton.cpp
code/llvm-pass/uvm/: CGMemAnalysis.cpp  CGMemAnalysis.h  CMakeLists.txt  CudaModulePass.cpp  CudaPass.cpp  CudaPass.h  MemAccessAnalysis.h  MemAccessDataStructure.h  MemAccessInfo.cpp  MemAccessInfoPass.cpp  MemAccessInfoPass.h  MemAnalysisDataStructure.h  MemAnalysisPass.cpp  OMPPass.cpp  OMPPass.h  TFGPass.cpp  TFGPass.h  UVMTransformPass.cpp
code/microbenchmark/: Makefile  access_locality.cu  access_sparse.cu  cpu_page.cpp  latency.cu  mgpu_lat.cu  page.cu  page_overlap.cu  page_sm.cu  placement.cu  throughput.cu  throughput_r.cu  throughput_rw.cu  throughput_w.cu
code/microbenchmark/scripts/: run_lat.lsf  run_pol.lsf  run_psm.lsf  run_sparse.lsf
code/minitest/: Makefile  func.cu  omp_m.c  omp_m_simple.c  omp_thrash.c  run_hpc1  run_ornl  test.cu  test_m.cu  uvmapitest.cu  uvmapitest_memcpy.cu
code/uvm-runtime/: Makefile  uvm-runtime-cuda-nvptx64-nvidia-cuda-sm_35.ll  uvm-runtime.cu  uvm-runtime.h  uvm-runtime.ll
paper/Ver_0.X/: Makefile  main.tex
paper/Ver_0.X/content/: intro.tex  tech.tex
